--- a/css/index.css
+++ b/css/index.css
@@ -7,17 +7,23 @@ body{
 nav a{
     text-decoration: none;
     color: black;
+    padding: 10px;
+    border-radius: 5px;
+    transition: 0.3s;
 }
 
 nav a:hover{
     color: #ffffff;
-    border-radius: 10px;
-    background-color: #37D4FF;
+    background-color: #247097;
 }
 
 .Presentacion{
     background-color: #247097;
     font-size: 52px;
+}
+
+main{
+    background-color: #F8F8F8;
 }
 
 .textoPresentacion{
@@ -49,7 +55,30 @@ nav a:hover{
     border-color: #2eb2d6;
 }
 
-.btnContacts{
+.btnPrograma{
     border-radius: 30px;
 }
 
+.social-media a{
+    font-size: 30px;
+    color: #000000;
+    background-color: #f8f8f8;
+    border-color: #FFFFFF;
+    border-radius: 10px;
+    padding: 10px;
+    text-decoration: none;
+    transition: 0.4s;
+}
+
+.social-media a:hover{
+    background-color: #247097;
+    color: #FFFFFF;
+}
+
+.carousel-item{
+    text-shadow: 2px 2px 5px #3f3f3f;
+}
+
+.carousel-item img{
+    width: 800px;
+}
