--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,80 +1,132 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&family=Fredoka:wght@300..700&display=swap');
 
-body{
-     font-family: "Fredoka", sans-serif;
+body {
+  font-family: "Fredoka", sans-serif;
+  background-color: #F8F8F8;
+  margin: 0;
+  padding: 0;
 }
 
-nav a{
-    text-decoration: none;
-    color: black;
+.nav-link {
+  text-decoration: none;
+  color: black;
+  transition: 0.4s;
+  border-radius: 10px;
+}
+
+.nav-link:hover {
+  color: #ffffff;
+  background-color: #247097;
+}
+
+main {
+  background-color: #D2D2D2;
+}
+
+.cardBg {
+  background-image: linear-gradient(rgba(126, 126, 126, 0), rgba(0, 0, 0, 0.5)), url(../img/ContactanosFondo.png);
+  background-position: 50% 60%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 4%;
+  color: #ffffff;
+  text-align: center;
+}
+
+.cardBg h2 {
+  font-size: 40px;
+}
+
+.ContDireccion {
+  background-color: #F8F8F8;
+  border-radius: 20px;
+  max-width: 100%;
+  overflow: hidden;
+}
+
+.ContDireccion iframe {
+  width: 50%;
+  height: 450px;
+  border-radius: 20px;
+  border: 0;
+  box-shadow: 0px 5px 10px #a7a7a7;
+}
+
+footer section {
+  background-color: #ffffff;
+}
+
+.card {
+  border-radius: 15px;
+  border: none;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.btn-primary {
+  background-color: #247097;
+  border: none;
+  border-radius: 25px;
+  transition: 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: #2eb2d6;
+}
+
+.bg-body-color {
+  background-color: #F8F8F8;
+}
+
+@media (max-width: 992px) {
+  .cardBg h2 {
+    font-size: 32px;
+  }
+
+  .ContDireccion iframe {
+    height: 500px;
+    width: 500px;
+  }
+}
+
+@media (max-width: 768px) {
+  .cardBg {
+    padding: 8%;
+  }
+
+  .cardBg h2 {
+    font-size: 28px;
+  }
+
+  .ContDireccion iframe {
+    height: 450px;
+    width: 450px;
+  }
+
+  footer h5 {
+    font-size: 18px;
+  }
+
+  .card-body h3 {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 480px) {
+  .cardBg h2 {
+    font-size: 24px;
+  }
+
+  .ContDireccion iframe {
+    height: 400px;
+    width: 400px;
+  }
+
+  .card-body {
+    padding: 1.5rem;
+  }
+
+  .btn-primary {
+    font-size: 16px;
     padding: 10px;
-    border-radius: 5px;
-    transition: 0.3s;
-}
-
-nav a:hover{
-    color: #ffffff;
-    background-color: #247097;
-}
-
-.Presentacion{
-    background-color: #247097;
-    font-size: 52px;
-}
-
-main{
-    background-color: #F8F8F8;
-}
-
-.cardBg{
-    background-image: linear-gradient(rgba(126, 126, 126, 0), rgba(0, 0, 0, 0.5)), url(../img/ContactanosFondo.png);
-    background-position: 50% 60%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 4%;
-    color: #ffffff;
-}
-
-.social-media a{
-    font-size: 20px;
-    color: #000000;
-    background-color: #ffffff;
-    border-color: #FFFFFF;
-    text-decoration: none;
-}
-
-.social-media a :hover{
-    background-color: #247097;
-    color: #FFFFFF;
-    width: 10px;
-}
-
-main{
-    background-color: #D2D2D2;
-}
-
-.ContDireccion a{
-    text-decoration: none;
-    color: #000000;
-}
-
-.ContDireccion a:hover{
-    text-decoration:underline;
-}
-
-.links-RedesSociales a{
-    text-decoration: none;
-    color: #000000;
-    border-radius: 10px;
-    transition: 0.4s;
-}
-
-.links-RedesSociales a:hover{
-    background-color: #247097;
-    color: #FFFFFF;
-    border-radius: 10px;
-}
-
-.footer{
-    background-color: #F8F8F8;
+  }
 }
